--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ lib64
 # Installer logs
 pip-log.txt
 
+# Application logs
+harbinger.log
+
 # Unit test / coverage reports
 cover/
 .coverage*
@@ -30,6 +33,9 @@ nosetests.xml
 .testrepository
 .stestr
 .venv
+coverage.xml
+.pytest*
+htmlcov
 
 # Translations
 *.mo
