--- a/tox.ini
+++ b/tox.ini
@@ -40,9 +40,7 @@ commands =
   find . -type f -name "*.coverage" -delete
   find . -type f -name "coverage.xml" -delete
   rm -rf {toxinidir}/cover
-  nosetests --all-modules --with-coverage --cover-erase --cover-package=harbinger
-  coverage xml --include={toxinidir}/harbinger* --omit={toxinidir}/harbinger/tests/*
-  coverage html -d {toxinidir}/cover --include={toxinidir}/harbinger* --omit={toxinidir}/harbinger/tests/*
+  py.test --cov=harbinger harbinger/tests/ --cov-report html --cov-report xml --cov-report term
   find . -type f -name "*.pyc" -delete
 whitelist_externals =
   find
