revert to using nosetests for tox coverage in order to keep with Openstack established process. Settings were updated to match the same results as pytests

--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,9 @@ commands =
   find . -type f -name "*.coverage" -delete
   find . -type f -name "coverage.xml" -delete
   rm -rf {toxinidir}/cover
-  py.test --cov=harbinger harbinger/tests/ --cov-report html --cov-report xml --cov-report term
+  nosetests --all-modules --with-coverage --cover-erase --cover-package=harbinger/
+  coverage xml --include={toxinidir}/harbinger* --omit={toxinidir}/harbinger/tests/*
+  coverage html -d {toxinidir}/cover --include={toxinidir}/harbinger* --omit={toxinidir}/harbinger/tests/*
   find . -type f -name "*.pyc" -delete
 whitelist_externals =
   find
