--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
 [testenv:bandit]
 basepython=python
 commands=
-   bandit -r harbinger -c .bandit.yml
+   bandit -r harbinger
 
 [testenv:venv]
 commands = {posargs}
