--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
 [testenv:bandit]
 basepython=python
 commands=
-   bandit -r harbinger
+   bandit -r --skip B404,B603 harbinger
 
 [testenv:venv]
 commands = {posargs}
