--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ sudo: false
 language: python
 python:
     - "2.7"    
-install: pip install tox-travis
-script: tox
+env:
+ - TOX_ENV=py27
+ - TOX_ENV=pep8
+ - TOX_ENV=pylint
+install: 
+ - pip install tox
+script: 
+ - tox -e $TOX_ENV
 
