Update Harbinger to use debian strectch container and python 3.5

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 2.0
-envlist = py27,pep8,pylint,bandit
+envlist = py35,pep8,pylint,bandit
 skipsdist = True
 
 [testenv]
@@ -61,8 +61,9 @@ commands = oslo_debug_helper -t harbinger/tests {posargs}
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
+# H238 conflicts with pylint R0205
 
 show-source = True
-ignore = E123,E125,H102
+ignore = E123,E125,H102,H238
 builtins = _
-exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,frameworks/*,venvs/*
