--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ ChangeLog
 
 # Files created by releasenotes build
 releasenotes/build
+
+# harbinger execution related directories
+venvs/
+frameworks/
+inputs/
+outputs/
