--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 sudo: false
 language: python
 python:
-    - "2.7"    
+    - "3.5"
 env:
- - TOX_ENV=py27
+ - TOX_ENV=py35
  - TOX_ENV=pep8
  - TOX_ENV=pylint
  - TOX_ENV=bandit
+ - TOX_ENV=cover
 install: 
  - pip install tox
 script: 
