--- a/harbinger/schemas/input.yaml
+++ b/harbinger/schemas/input.yaml
@@ -6,15 +6,25 @@ mapping:
     type: map
     allowempty: True
     mapping:
-      project:
+      user_id:
         type: str
-        required: True
       username:
         type: str
-        required: True
       password:
         type: str
         required: True
+      user_domain_id:
+        type: str
+      user_domain_name:
+        type: str
+      project_id:
+        type: str
+      project_name:
+        type: str
+      project_domain_id:
+        type: str
+      project_domain_name:
+        type: str
       external_network:
         type: str
         required: True
