Update formatting to use google's yapf for more consistent pep8 compliant formatting

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,19 @@ deps =
 commands = stestr run {posargs}
 
 [testenv:pep8]
-commands = flake8 {posargs}
+commands =
+  flake8 {posargs}
+  {toxinidir}/tools/yapf-with-message.sh -dr {toxinidir}/harbinger
+
+# When the code is gated, the pep8 job will check that the code matches yapf's
+# formatting, but will not change anything.
+# Use tox -efmt to reformat the code according to yapf standards.
+[testenv:fmt]
+basepython = python3
+deps =
+    -r{toxinidir}/test-requirements.txt
+commands =
+    yapf -ir {toxinidir}/harbinger
 
 # At this time we are only checking for C0103(invalid-name) which in the near
 # future will be expanded upon
